crates/daedalus/tests/ui/transport/fail_type_key_generic.rs
use daedalus::type_key;

#[type_key("test:generic")]
struct Generic<T> {
    value: T,
}

fn main() {}
